--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Android -->
     <meta name="color-theme" content="#34db74">
+    <meta name="theme-color" content="#34db74">
 
 </head>
 
